fix align

--- a/static/style.css
+++ b/static/style.css
@@ -22,5 +22,5 @@ body {
 }
 
 .header {
-    margin: 0 auto;
+    text-align: center;
 }
